--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,10 +9,358 @@ html {
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0
+    color: rgb(108, 111, 115);
+    font-family: 'Roboto';
+    text-align: center;
 }
 
-h1 {
-    color: purple;
+#content {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: minmax(50px, auto);
+    max-width: 1100px;
+    margin: 0 auto;
+    gap: 10px;
+    /* padding: 10px; */
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 5px 10px;
+    border-bottom: 1px solid #d1d1d1;
+    /* grid-template-columns: repeat(12, 1fr); */
+}
+
+nav img {
+    width: 150px;
+}
+
+.nav-item {
+    padding: 0 10px;
+    font-size: 1.2rem;
+    color: rgba(74, 114, 167, 1);
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.nav1 {
+    margin-right: auto;
+}
+
+.nav2 {}
+
+.nav3 {}
+
+#stats {
+    grid-column: 2 /12;
+    grid-row: 1/2;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.stat {
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    justify-content: center;
+    align-content: center;
+}
+
+.stat svg {
+    justify-self: end;
+    padding-right: 10px;
+    align-self: center;
+    color: rgba(74, 114, 167, 1);
+    font-size: 3rem;
+}
+
+.stat-text-value {
+    justify-self: start;
+    align-self: center;
+}
+
+.stat-text {
+    font-size: 1.4rem;
+    font-weight: 300;
+    color: rgb(29, 79, 145);
+}
+
+.stat-value {
+    font-size: 0.9rem;
+    font-weight: 500;
+    color: rgba(173, 22, 132, 1);
+}
+
+#charts {
+    padding: 20px;
+    grid-column: 1 /13;
+    grid-row: 2 / 4;
+    display: grid;
+    gap: 20px;
+    /* max-width: 1400px; */
+    border-bottom: 1px solid #f3f3f3;
+    border-top: 1px solid #f3f3f3;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(200px, auto);
+}
+
+.chart {
+    align-self: stretch;
+    justify-self: stretch;
+}
+
+.chart1 {
+    display: grid;
+    min-width: 250px;
+    max-width: 300px;
+}
+
+.chart4 {
+    display: grid;
+    grid-template-rows: 1fr 4fr;
+}
+
+.chart-header {
+    padding: 10px;
+
+    color: #fff;
+    border-radius: 0.5rem;
+    box-shadow: 1px 2px 10px rgba(229, 221, 224, 1);
+}
+
+.chart-box {
+    box-shadow: 1px 2px 10px rgba(229, 221, 224, 1);
+    border-radius: 0.5rem;
+    align-self: center;
+    padding: 10px;
+}
+
+.subchart4-2 {
+    padding: 10px;
+    font-size: 1rem;
+    font-weight: 500;
+    /* color: rgba(173, 22, 132, 1); */
+}
+
+.subchart4-3 {
+    font-size: 2.2rem;
+    font-weight: 300;
+    color: rgba(173, 22, 132, 1);
+}
+
+.hit-count {
+    font-size: 1rem;
+    font-weight: 300;
+    color: rgba(173, 22, 132, 1);
+}
+
+.blue-gradient {
+    background: linear-gradient(90deg,
+            rgba(74, 114, 167, 1) 0%,
+            rgba(29, 79, 145, 1) 100%);
+}
+
+.purple-gradient {
+    background: linear-gradient(90deg,
+            rgba(173, 22, 132, 1) 0%,
+            rgba(110, 31, 119, 1) 100%);
+}
+
+#icons {
+    grid-column: 1 /13;
+    grid-row: 4 / 5;
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr;
+    grid-auto-rows: minmax(50px, auto);
+    font-size: 1.1rem;
+}
+
+.icon {
+    border-right: 1px solid #f3f3f3;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    color: rgba(74, 114, 167, 1);
+}
+
+.icon-4 {
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    border: none;
+}
+
+.icon-text {
+    padding-top: 5px;
+    font-size: 1.3rem;
+    font-weight: 300;
+    color: rgb(29, 79, 145);
+}
+
+.icon-subtext {
+    font-size: 0.8rem;
+    font-weight: 300;
+    color: #a3a3a3;
+}
+
+#cards {
+    grid-column: 2 /12;
+    gap: 40px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 20px 0;
+}
+
+.card {
+    border-radius: 0.5rem;
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.2);
+    display: grid;
+    min-width: 200px;
+    max-width: 300px;
+    justify-self: center;
+    /* grid-auto-rows: minmax(100px, auto); */
+    /* color: rgba(3, 157, 74, 1); */
+}
+
+.card-header {
+    /* align-self: start; */
+    padding: 0.5rem;
+    height: 40px;
+    color: #fff;
+    border-radius: 0.5rem;
+}
+
+.card img {
+    width: 70%;
+    border-bottom: 1px solid #f3f3f3;
+}
+
+.card-more {
+    padding: 0.5rem;
+    color: rgb(29, 79, 145);
+    border-radius: 0.5rem;
+    border: 1px solid #e3e3e3;
+    cursor: pointer;
+}
+
+.card-body {
+    display: grid;
+    grid-auto-rows: minmax(30px, auto);
+}
+
+.card-body-text {
+    align-self: end;
+    font-size: 0.9rem;
+    font-weight: 500;
+    color: #555;
+}
+
+.card-body-value {
+    align-self: start;
+    font-size: 0.8rem;
+    font-weight: 300;
+    color: #888;
+}
+
+#footer {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr 1fr;
+    gap: 20px;
+    margin: 20px;
+    align-content: start;
+}
+
+.divider {
+    margin: 25px 0;
+    height: 5px;
+    background: linear-gradient(90deg,
+            rgba(214, 44, 129, 1) 0%,
+            rgba(48, 69, 141, 1) 100%);
+}
+
+.footer-heading {
+    color: #26478e;
+    font-size: 16px;
+    border-bottom: 1px solid #d8d8d8;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+    font-weight: 500;
+    text-align: left;
+}
+
+footer ul {
+    list-style-type: none;
+    padding: 0;
+    display: grid;
+    text-align: start;
+    justify-content: start;
+    line-height: 1.8;
+}
+
+footer .about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.footer-subheading {
+    font-weight: 400;
+    color: #575756;
+    align-self: start;
+    cursor: pointer;
+
+
+}
+
+/* 
+ */
+/*  */
+/*  */
+
+/*  */
+
+/*  */
+
+/* 
+ */
+/*  */
+/*  */
+
+/*  */
+
+/*  */
+@media screen and (max-width: 1000px) {
+    #cards {
+        gap: 30px;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    #footer {
+
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 750px) {
+    #cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    #footer {
+
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
