Data feeding through, Utils.js added

--- a/templates/partials/downloadGauge.hbs
+++ b/templates/partials/downloadGauge.hbs
@@ -293,7 +293,7 @@
         <text id="tripleDigit" transform="matrix(1 0 0 1 44.709 102.2041)" class="st13 st14"></text>
         <rect x="44.36" y="76.18" class="st12" width="67.92" height="37.4" />
         <text id="doubleDigit" transform="matrix(1 0 0 1 54.5796 102.2295)" class="st13 st14">
-            {{day}}
+            {{downloads}}
         </text>
         <rect x="44.36" y="76.66" class="st12" width="67.92" height="37.4" />
         <text id="singleDigit" transform="matrix(1 0 0 1 64.3716 102.2063)" class="st13 st14"></text>
