--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,6 +18,9 @@
     {{>header}}
     {{>main day=day}}
     {{>footer}}
+    {{#each data}}
+    <li>{{this}}</li>
+    {{/each}}
 </body>
 
 </html>
