--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,7 +10,7 @@ html {
 
 body {
     color: rgb(108, 111, 115);
-    font-family: 'Roboto';
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
     text-align: center;
 }
 
@@ -82,8 +82,8 @@ nav img {
 }
 
 .stat-text {
-    font-size: 1.4rem;
-    font-weight: 300;
+    font-size: 1.0rem;
+    font-weight: 500;
     color: rgb(29, 79, 145);
 }
 
@@ -100,7 +100,7 @@ nav img {
     display: grid;
     gap: 20px;
     /* max-width: 1400px; */
-    border-bottom: 1px solid #f3f3f3;
+
     border-top: 1px solid #f3f3f3;
     align-items: center;
     justify-content: center;
@@ -158,6 +158,11 @@ nav img {
     color: rgba(173, 22, 132, 1);
 }
 
+#charts .submit {
+    color: #fff;
+    border-radius: 6px;
+}
+
 .blue-gradient {
     background: linear-gradient(90deg,
             rgba(74, 114, 167, 1) 0%,
@@ -177,6 +182,8 @@ nav img {
     grid-template-columns: 1fr 1fr 2fr;
     grid-auto-rows: minmax(50px, auto);
     font-size: 1.1rem;
+    border-top: 1px solid #f3f3f3;
+    border-bottom: 1px solid #f3f3f3;
 }
 
 .icon {
@@ -200,8 +207,8 @@ nav img {
 
 .icon-text {
     padding-top: 5px;
-    font-size: 1.3rem;
-    font-weight: 300;
+    font-size: 1.0rem;
+    font-weight: 500;
     color: rgb(29, 79, 145);
 }
 
@@ -315,6 +322,62 @@ footer .about {
     color: #575756;
     align-self: start;
     cursor: pointer;
+
+
+}
+
+
+#lists {
+    grid-column: 2 /12;
+    gap: 20px 80px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 20px;
+
+}
+
+#lists ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+#lists img {
+    width: 100px;
+    margin-right: 20px;
+}
+
+.list {
+    display: grid;
+    grid-auto-rows: minmax(60px, auto);
+    align-items: center;
+}
+
+.list-title {
+    color: #26478e;
+    font-weight: 500;
+    padding: 10px;
+    border-bottom: 1px solid #e3e3e3;
+}
+
+.list li {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.list .rank-value {
+    font-size: 0.9rem;
+    font-weight: 500;
+    color: rgba(173, 22, 132, 1);
+    justify-self: flex-end;
+    margin-left: auto;
+}
+
+.list .rank {
+    font-size: 0.9rem;
+    font-weight: 500;
+    color: rgb(29, 79, 145);
+    margin: 0 20px;
 
 
 }
