--- a/templates/partials/main.hbs
+++ b/templates/partials/main.hbs
@@ -6,7 +6,7 @@
                 <div class="stat-text">
                     Total Visits
                 </div>
-                <div class="stat-value">(500)</div>
+                <div class="stat-value">({{data.totalVisits}})</div>
             </div>
         </div>
         <div class="stat stat-2">
@@ -15,7 +15,7 @@
                 <div class="stat-text">
                     Unique Visits
                 </div>
-                <div class="stat-value">(350)</div>
+                <div class="stat-value">({{data.uniqueVisits}})</div>
             </div>
         </div>
         <div class="stat stat-3">
@@ -24,13 +24,13 @@
                 <div class="stat-text">
                     Avg. Visit Length
                 </div>
-                <div class="stat-value">(30s)</div>
+                <div class="stat-value">({{data.averageVisitLength}} s)</div>
             </div>
         </div>
     </section>
     <section id="charts">
         <div class="chart chart1">
-            {{>downloadGauge downloads=downloads}}
+            {{>downloadGauge downloads=data.downloads}}
         </div>
 
         <div class="chart chart2">
@@ -49,7 +49,7 @@
                 <!-- <div class="subchart4-2">UK ECONOMIC FORECASTS</div>
               <div class="subchart4-3">125</div>
               <div class="hit-count"> Visits in Previous 30 Days</div> -->
-                <div class="subchart4-3">MAY {{day}} 2020</div>
+                <div class="subchart4-3">{{displayDate}}</div>
                 <form action="/" method="Get">
                     <select name="month">
                         <option value="0">Jan</option>
@@ -76,8 +76,8 @@
             <i class="fas fa-user fa-lg"></i>
             <i class="far fa-user fa-lg"></i>
 
-            <div class="icon-text">18</div>
-            <div class="icon-text">4</div>
+            <div class="icon-text">{{data.subscribers}}</div>
+            <div class="icon-text">{{data.nonSubscribers}}</div>
 
             <div class="icon-subtext">Subscriber</div>
             <div class="icon-subtext">Non-Subscriber</div>
@@ -86,8 +86,8 @@
             <i class="fas fa-mobile-alt fa-lg"></i>
             <i class="fas fa-desktop fa-lg"></i>
 
-            <div class="icon-text">48%</div>
-            <div class="icon-text">52%</div>
+            <div class="icon-text">{{data.mobile}}%</div>
+            <div class="icon-text">{{data.desktop}}%</div>
 
             <div class="icon-subtext">Mobile</div>
             <div class="icon-subtext">Desktop</div>
@@ -98,13 +98,13 @@
             <i class="fas fa-ad fa-lg"></i>
             <i class="fab fa-twitter-square fa-lg"></i>
 
-            <div class="icon-text">10%</div>
-            <div class="icon-text">82%</div>
-            <div class="icon-text">2%</div>
-            <div class="icon-text">6%</div>
+            <div class="icon-text">{{data.url}}%</div>
+            <div class="icon-text">{{data.link}}%</div>
+            <div class="icon-text">{{data.advert}}%</div>
+            <div class="icon-text">{{data.social}}%</div>
 
-            <div class="icon-subtext">Followed Link</div>
             <div class="icon-subtext">URL</div>
+            <div class="icon-subtext">Email Link</div>
             <div class="icon-subtext">Advert</div>
             <div class="icon-subtext">Social Media</div>
         </div>
