Download Text Updater Working

--- a/templates/partials/downloadGauge.hbs
+++ b/templates/partials/downloadGauge.hbs
@@ -290,12 +290,15 @@
     <g id="Number">
         <rect x="26.01" y="71.56" class="st12" width="104.62" height="47.6" />
         <rect x="44.36" y="76.66" class="st12" width="67.92" height="37.4" />
-        <text id="tripleDigit" transform="matrix(1 0 0 1 44.709 102.2041)" class="st13 st14"></text>
+        <text id="tripleDigit" transform="matrix(1 0 0 1 44.709 102.2041)"
+            class="downloadText st13 st14 {{downloadColor}}">{{downloads.tripleDigit}}</text>
         <rect x="44.36" y="76.18" class="st12" width="67.92" height="37.4" />
-        <text id="doubleDigit" transform="matrix(1 0 0 1 54.5796 102.2295)" class="st13 st14">
-            {{downloads}}
+        <text id="doubleDigit" transform="matrix(1 0 0 1 54.5796 102.2295)"
+            class="downloadText st13 st14 {{downloadColor}}">
+            {{downloads.doubleDigit}}
         </text>
         <rect x="44.36" y="76.66" class="st12" width="67.92" height="37.4" />
-        <text id="singleDigit" transform="matrix(1 0 0 1 64.3716 102.2063)" class="st13 st14"></text>
+        <text id="singleDigit" transform="matrix(1 0 0 1 64.3716 102.2063)"
+            class="downloadText st13 st14 {{downloadColor}}">{{downloads.singleDigit}}</text>
     </g>
 </svg>
