--- a/templates/partials/main.hbs
+++ b/templates/partials/main.hbs
@@ -30,7 +30,7 @@
     </section>
     <section id="charts">
         <div class="chart chart1">
-            {{>downloadGauge downloads=data.downloads}}
+            {{>downloadGauge downloads=data.downloads downloadColor=data.downloadColor}}
         </div>
 
         <div class="chart chart2">
@@ -93,8 +93,8 @@
             <div class="icon-subtext">Desktop</div>
         </div>
         <div class="icon icon-4 icon3">
-            <i class="fas fa-at fa-lg"></i>
             <i class="fab fa-chrome fa-lg"></i>
+            <i class="fas fa-at fa-lg"></i>
             <i class="fas fa-ad fa-lg"></i>
             <i class="fab fa-twitter-square fa-lg"></i>
 
@@ -117,31 +117,16 @@
                 <li><span class="rank">{{inc @index}} </span> {{this.[0]}}<span class="rank-value">({{this.[1]}})</span>
                 </li>
                 {{/each}}
-
-                {{!-- <li><span class="rank">2 </span> EU Economic Forecasts<span class="rank-value">(280)</span></li>
-                <li><span class="rank">3 </span> Credit Market Forecasts<span class="rank-value">(268)</span></li>
-                <li><span class="rank">4 </span> Housing Market Forecasts<span class="rank-value">(111)</span></li>
-                <li><span class="rank">5 </span> Household Income Forecasts<span class="rank-value">(52)</span></li> --}}
             </ul>
         </div>
         <div class="right-list">
             <div class="list-title">Visits by Company</div>
             <ul class="list">
-                <li><span class="rank">1 </span> <img src="../../public/img/Aandewiel.png" alt="">Aandeweil
-                    Investments<span class="rank-value">(420)</span></li>
-                <li><span class="rank">2 </span> <img src="../../public/img/Arbor.png" alt="">Arbor Capital<span
-                        class="rank-value">(356)</span></li>
-                <li><span class="rank">3 </span> <img src="../../public/img/Melior.png" alt="">Melior Capital<span
-                        class="rank-value">(220)</span></li>
-                <li><span class="rank">4 </span> <img src="../../public/img/Temple.png" alt="">Temple Securities<span
-                        class="rank-value">(111)</span></li>
-                <li><span class="rank">5 </span> <img src="../../public/img/Melior.png" alt="">Melior Capital<span
-                        class="rank-value">(16)</span></li>
-
-
-
-
-
+                {{#each data.top5Companies}}
+                <li><span class="rank">{{inc @index}} </span> <img src="../../public/img/{{this.[0]}}.png"
+                        alt="">{{this.[0]}}<span class="rank-value">({{this.[1]}})</span></li>
+                </li>
+                {{/each}}
 
             </ul>
         </div>
