--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -17,7 +17,7 @@
 
 <body>
     {{>header}}
-    {{>main data=data chartData=chartData}}
+    {{>main data=data chartData=chartData days=days}}
     {{>footer}}
 
     <script src="../../public/js/app.js"></script>
