--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,15 +53,56 @@ nav img {
 
 #date-picker {
     grid-column: 1 /13;
-    grid-row: 1/2;
+    grid-row: 1;
     display: grid;
+}
+
+.date {
+    font-size: 2rem;
+    font-weight: 300;
+    color: rgba(173, 22, 132, 1);
+}
+
+form label {
+    font-size: 0.8rem;
+    font-weight: 300;
+    color: rgb(108, 111, 115)
+}
+
+.date-box {
+    margin-top: 10px;
+    box-shadow: 1px 2px 10px rgba(100, 100, 100, 0.2);
+    border-radius: 0.5rem;
+    align-self: center;
+    padding: 10px;
+}
+
+.date-box select {
+    border: none;
+    border-bottom: 2px solid #f3f3f3;
+    font-family: roboto;
+}
+
+.submit {
+    color: #fff;
+    border-radius: 6px;
+    border: 2px solid rgba(110, 31, 119, 0.8);
+    margin-left: 2px;
+
+}
+
+button:hover {
+    transform: scale(1.1);
+}
+
+button:active {
+    transform: scale(0.95);
 }
 
 #stats {
     display: grid;
     align-self: center;
     justify-self: center;
-    max-width: 320px;
 
 }
 
@@ -71,10 +112,12 @@ nav img {
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
     align-items: center;
+    font-size: 0.9rem;
+    font-weight: 500;
 }
 
 .stat svg {
-    justify-self: end;
+    justify-self: center;
     padding-right: 10px;
     align-self: center;
     color: rgba(74, 114, 167, 1);
@@ -82,20 +125,12 @@ nav img {
     width: 1.1em !important;
 }
 
-.stat-text-value {
-    justify-self: start;
-    align-self: center;
-}
 
 .stat-text {
-    font-size: 0.9rem;
-    font-weight: 500;
     color: rgb(29, 79, 145);
 }
 
 .stat-value {
-    font-size: 0.9rem;
-    font-weight: 500;
     color: rgba(173, 22, 132, 1);
 }
 
@@ -109,7 +144,7 @@ nav img {
     gap: 20px;
     /* max-width: 1400px; */
 
-    border-top: 1px solid #f3f3f3;
+    /* border-top: 1px solid #f3f3f3; */
     align-items: center;
     justify-content: center;
     grid-template-columns: repeat(4, 1fr);
@@ -127,59 +162,14 @@ nav img {
     max-width: 300px;
 }
 
-.chart4 {
-    display: grid;
-    grid-template-rows: 1fr 4fr;
-}
-
-.chart-header {
-    padding: 10px;
-
-    color: #fff;
-    border-radius: 0.5rem;
-    box-shadow: 1px 2px 10px rgba(229, 221, 224, 1);
-}
-
-.chart-box {
-    box-shadow: 1px 2px 10px rgba(229, 221, 224, 1);
-    border-radius: 0.5rem;
-    align-self: center;
-    padding: 10px;
-}
-
-.subchart4-2 {
-    padding: 10px;
-    font-size: 1rem;
-    font-weight: 500;
-    /* color: rgba(173, 22, 132, 1); */
-}
-
-.subchart4-3 {
-    font-size: 2rem;
-    font-weight: 300;
-    color: rgba(173, 22, 132, 1);
-}
-
 .hit-count {
     font-size: 1rem;
     font-weight: 300;
     color: rgba(173, 22, 132, 1);
 }
 
-.submit {
-    color: #fff;
-    border-radius: 6px;
-    padding: 2px;
-    margin: 2px;
-}
 
-button:hover {
-    transform: scale(1.1);
-}
 
-button:active {
-    transform: scale(0.95);
-}
 
 .blue-gradient {
     background: linear-gradient(90deg,
@@ -435,7 +425,7 @@ footer .about {
 
     #charts {
         grid-template-columns: repeat(2, 1fr);
-        grid-column: 2 /12;
+
     }
 
     .chart1 {
@@ -446,19 +436,44 @@ footer .about {
         justify-self: center;
     }
 
-}
+    .stat {
+        font-size: 1.1em;
 
-@media screen and (max-width: 750px) {
-    #charts {
-        grid-template-columns: repeat(1, 1fr);
     }
 
-    #footer {
+    @media screen and (max-width: 750px) {
+        #charts {
+            grid-template-columns: repeat(1, 1fr);
+        }
 
-        grid-template-columns: repeat(1, 1fr);
-    }
+        .chart1 {
+            min-width: 350px;
+        }
 
-    #lists {
-        grid-template-columns: repeat(1, 1fr);
+        .stat {
+            font-size: 1.1em;
+
+        }
+
+        #icons {
+            grid-template-columns: 1fr 1fr;
+        }
+
+
+
+        .icon-4 {
+            border-top: 1px solid #f3f3f3;
+            grid-row: 2;
+            grid-column: 1/13;
+        }
+
+        #footer {
+
+            grid-template-columns: repeat(1, 1fr);
+        }
+
+        #lists {
+            grid-template-columns: repeat(1, 1fr);
+        }
+
     }
-}
