--- a/templates/partials/main.hbs
+++ b/templates/partials/main.hbs
@@ -3,7 +3,7 @@
         <div class="">
             <div class="date-box">
                 <div id="date" class="date">{{displayDate}}</div>
-                <form action="/" method="Get">
+                <form class="date-form" action="/" method="Get">
                     <label for="month">Report Date: </label>
                     <select id="month-selection" name="month">
                         <option value="0">Jan</option>
@@ -20,7 +20,7 @@
                     <select name="year">
                         <option value="2020">2020</option>
                     </select>
-                    <button class="submit purple-gradient">Submit</button>
+                    <button class="submit purple-gradient">Update</button>
                 </form>
             </div>
         </div>
